<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <groupId>org.example</groupId>
   <artifactId>gbhujanfx1</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>gbhujanfx1</name>

   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven.compiler.source>17</maven.compiler.source>
       <maven.compiler.target>17</maven.compiler.target>
       <javafx.version>21.0.2</javafx.version>
   </properties>

   <dependencies>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-base</artifactId>
           <version>${javafx.version}</version>
       </dependency>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-controls</artifactId>
           <version>${javafx.version}</version>
       </dependency>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-fxml</artifactId>
           <version>${javafx.version}</version>
       </dependency>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-graphics</artifactId>
           <version>${javafx.version}</version>
       </dependency>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-media</artifactId>
           <version>${javafx.version}</version>
       </dependency>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-swing</artifactId>
           <version>${javafx.version}</version>
       </dependency>
       <dependency>
           <groupId>org.openjfx</groupId>
           <artifactId>javafx-web</artifactId>
           <version>${javafx.version}</version>
       </dependency>

       <dependency>
           <groupId>org.controlsfx</groupId>
           <artifactId>controlsfx</artifactId>
           <version>11.2.1</version>
       </dependency>
       <dependency>
           <groupId>com.dlsc.formsfx</groupId>
           <artifactId>formsfx-core</artifactId>
           <version>11.6.0</version>
       </dependency>
       <dependency>
           <groupId>net.synedra</groupId>
           <artifactId>validatorfx</artifactId>
           <version>0.5.0</version>
       </dependency>
       <dependency>
           <groupId>org.kordamp.ikonli</groupId>
           <artifactId>ikonli-javafx</artifactId>
           <version>12.3.1</version>
       </dependency>
       <dependency>
           <groupId>org.kordamp.bootstrapfx</groupId>
           <artifactId>bootstrapfx-core</artifactId>
           <version>0.4.0</version>
       </dependency>
       <dependency>
           <groupId>eu.hansolo</groupId>
           <artifactId>tilesfx</artifactId>
           <version>21.0.3</version>
       </dependency>
       <dependency>
           <groupId>com.github.almasb</groupId>
           <artifactId>fxgl</artifactId>
           <version>11.17</version>
       </dependency>
   </dependencies>

   <build>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.11.0</version>
               <configuration>
                   <source>${maven.compiler.source}</source>
                   <target>${maven.compiler.target}</target>
               </configuration>
           </plugin>

           <plugin>
               <groupId>org.openjfx</groupId>
               <artifactId>javafx-maven-plugin</artifactId>
               <version>0.0.8</version>
               <configuration>
                   <mainClass>org.example.gbhujanfx1.Application</mainClass>
                   <launcher>app</launcher>
                   <jlinkImageName>gbhujanfx1</jlinkImageName>
                   <jlinkZipName>gbhujanfx1</jlinkZipName>
                   <noManPages>true</noManPages>
                   <stripDebug>true</stripDebug>
                   <noHeaderFiles>true</noHeaderFiles>
                   <compress>2</compress>
                   <options>
                       <option>--add-opens</option>
                       <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                       <option>--add-opens</option>
                       <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                       <option>--add-opens</option>
                       <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                       <option>--add-opens</option>
                       <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                       <option>--add-opens</option>
                       <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                       <option>--add-opens</option>
                       <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                   </options>
               </configuration>
           </plugin>

           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-shade-plugin</artifactId>
               <version>3.5.0</version>
               <executions>
                   <execution>
                       <phase>package</phase>
                       <goals>
                           <goal>shade</goal>
                       </goals>
                       <configuration>
                           <transformers>
                               <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                   <mainClass>org.example.gbhujanfx1.Application</mainClass>
                               </transformer>
                           </transformers>
                       </configuration>
                   </execution>
               </executions>
           </plugin>


           <plugin>
               <groupId>org.panteleyev</groupId>
               <artifactId>jpackage-maven-plugin</artifactId>
               <version>1.6.0</version>
               <configuration>
                   <name>MyApp</name>
                   <mainClass>org.example.gbhujanfx1.Application</mainClass>
                   <mainJar>gbhujanfx1-1.0-SNAPSHOT.jar</mainJar>
                   <input>target</input>
                   <destination>target/dist</destination>
                   <type>PKG</type>
                   <runtimeImage>target/gbhujanfx1</runtimeImage>
                   <appVersion>1.0.0</appVersion>
               </configuration>
            </plugin>


       </plugins>
   </build>
</project>